--- a/public/stylesheets/navbar.css
+++ b/public/stylesheets/navbar.css
@@ -14,6 +14,7 @@ body {
   top: 0;
   position: fixed;
   width: 100%;
+  z-index: 999;
 }
 
 .navLink {
